[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/player_fmq.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/player_gamer.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/background_floor.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/background_wall_wood.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/message_game_over.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/player_gamer.gd" type="Script" id=6]
[ext_resource path="res://scenes/player_fmq.gd" type="Script" id=7]
[ext_resource path="res://assets/sounds/background_music.mp3" type="AudioStream" id=8]
[ext_resource path="res://assets/graphics/objects/button_play_blue.png" type="Texture" id=9]
[ext_resource path="res://scenes/button_play.gd" type="Script" id=10]
[ext_resource path="res://assets/sounds/win.mp3" type="AudioStream" id=11]
[ext_resource path="res://scenes/kick_out_win.gd" type="Script" id=12]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 83.5, 4 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 320.5, 316 )

[node name="fmq_level_0" type="Node2D"]

[node name="background_floor" parent="." instance=ExtResource( 3 )]

[node name="background_wall_wood" parent="." instance=ExtResource( 4 )]

[node name="background_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -9.614
autoplay = true

[node name="player_fmq" parent="." instance=ExtResource( 1 )]
position = Vector2( -200, 210 )
script = ExtResource( 7 )

[node name="player_gamer" parent="." instance=ExtResource( 2 )]
position = Vector2( 220, 210 )
script = ExtResource( 6 )

[node name="object_kick_out" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, -295 )

[node name="kick_out_win" type="RigidBody2D" parent="."]
position = Vector2( 0, -191 )
contacts_reported = 1
contact_monitor = true
script = ExtResource( 12 )

[node name="kick_out_win_area" type="CollisionShape2D" parent="kick_out_win"]
position = Vector2( -1, -201 )
shape = SubResource( 2 )

[node name="kick_out_win_sound" type="AudioStreamPlayer" parent="kick_out_win"]
stream = ExtResource( 11 )
volume_db = -1.2

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -1 )
current = true
zoom = Vector2( 1.1, 1.1 )

[node name="area_limits" type="Area2D" parent="."]
visible = false
position = Vector2( -200, 210 )

[node name="game_area_limits" type="CollisionShape2D" parent="area_limits"]
position = Vector2( 199.5, -206 )
shape = SubResource( 1 )
disabled = true

[node name="button_play" type="Node2D" parent="."]
position = Vector2( -73, 266 )

[node name="button_play" type="Button" parent="button_play"]
modulate = Color( 0, 0, 0, 0 )
self_modulate = Color( 0, 0, 0, 0 )
margin_left = 51.0
margin_top = 1.0
margin_right = 93.0
margin_bottom = 41.0
script = ExtResource( 10 )

[node name="sprite_play" type="Sprite" parent="button_play"]
position = Vector2( 72.5, 21.5 )
scale = Vector2( 0.295455, 0.295455 )
texture = ExtResource( 9 )

[connection signal="body_entered" from="kick_out_win" to="kick_out_win" method="_on_kick_out_win_body_entered"]
[connection signal="finished" from="kick_out_win/kick_out_win_sound" to="kick_out_win" method="_on_kick_out_win_sound_finished"]
[connection signal="pressed" from="button_play/button_play" to="button_play/button_play" method="_on_button_play_pressed"]
